--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,13 @@ body {
   padding: 8px 0;
 }
 
-.navbar-brand{
-  font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
-    font-size: 1.5rem;
-    color: #333;
-    text-transform: uppercase;
+.navbar-brand {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-size: 1.5rem;
+  color: #333;
+  text-transform: uppercase;
 }
 
 .navbar-brand img {
@@ -314,26 +314,32 @@ body {
   margin-right: 10px;
 }
 
+/* Gallery Card */
 
- /* Gallery Card */
-    .gallery-card {
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+.gallery-line {
+  width: 50px;
+  height: 3px;
+  background-color: #3fbbc0;
+  margin-top: 8px;
+}
+.gallery-card {
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-    .gallery-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-    }
+.gallery-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
 
-    .gallery-card img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      border-radius: 0.5rem;
-    }
+.gallery-card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
 
-   .custom-close {
+.custom-close {
   filter: none;
   opacity: 1;
   width: 1.6rem;
@@ -344,7 +350,7 @@ body {
 .custom-close::before {
   content: "✕";
   color: #000;
-  font-size: 26px; 
+  font-size: 26px;
   font-weight: 800;
   position: absolute;
   inset: 0;
@@ -359,7 +365,6 @@ body {
   border-radius: 12px;
 }
 
-
 .custom-close {
   background-image: none;
 }
@@ -367,8 +372,6 @@ body {
   transform: scale(1.1);
   opacity: 0.85;
 }
-
-
 
 /* services */
 
@@ -410,9 +413,10 @@ body {
 }
 
 #services .service-divider {
-  width: 35px;
-  height: 2px;
+  width: 50px;
+  height: 3px;
   background-color: #3fbbc0;
+  padding-top: 3px;
   margin: 10px auto;
 }
 
